--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,11 @@
 
   <ion-slides page>
     <ion-slide>
-      <div style="height:50vh; width:100%; padding-bottom:75vh"></div>
+      <div style="height:50vh; width:100%; padding-bottom:65vh"></div>
       <h2 class="slide-title" class="title">¿Listo para <strong>Calcular</strong>?</h2>
+      <button ion-button round class="btn upload" large outline icon-end color="light" style="text-transform: uppercase" (click)="upload()">
+        Sincronizar
+      </button>
       <button ion-button round class="btn" large outline icon-end color="light" style="text-transform: uppercase" (click)="calculate()">
         Comenzar
       </button>
